# second-brain

./: .dockerignore  .gitignore  Dockerfile  INDEX.example.md  NEWS_FRESHRSS_MIGRATION.md  NEWS_SYNTHESIS.example.md  PROJECT.md  README.md  TRAINING.example.md  config.example.yml  docker-compose.example.yml  pyproject.toml  reslog  tree.txt
backend/app/: cli.py  config.py  main.py
backend/app/anki/: __init__.py  client.py  connection.py  repo.py  scheduler.py  schema.py  service.py  sync.py  vault_importer.py
backend/app/api/: anki.py  auth.py  chat.py  modules.py  news.py  organize.py  sse_utils.py  training.py  vault.py  wiki_reviews.py
backend/app/auth/: __init__.py  dependencies.py  passwords.py  sessions.py
backend/app/chat/: markdown.py  orchestrator.py  persistence.py  system_prompts.py
backend/app/db/: __init__.py  connection.py  migrations.py  models.py
backend/app/jobs/: __init__.py  journal_archive.py  organize.py  scheduler.py
backend/app/llm/: __init__.py  base.py  chatgpt.py  chatgpt_auth.py  helpers.py  openai_compat.py  router.py  (+1 more)
backend/migrations/: 0001_initial.sql  0002_edit_locks.sql  0003_organize.sql  0004_note_reviews.sql  0005_news.sql  0006_news_tags.sql  0007_news_read_state.sql  0008_news_simplify.sql  0009_news_feeds.sql  0010_news_slim.sql  0011_anki.sql  0012_drop_organize_webapp_tables.sql  0013_wiki_reviews.sql  0014_drop_anki_sync_state.sql  0015_news_greader.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+80 files in other folders)
